test: fix bug with icon on mobile

--- a/src/pages/LendPage/components/LendCard/LendCard.module.less
+++ b/src/pages/LendPage/components/LendCard/LendCard.module.less
@@ -44,6 +44,11 @@
     top: 28px;
     right: 24px;
   }
+
+  svg {
+    width: 24px;
+    height: 24px;
+  }
 }
 .chevronButton.active svg {
   transform: rotate(180deg);
